--- a/todo-piranha-form/todopiranhaform/templates/layout.jinja2
+++ b/todo-piranha-form/todopiranhaform/templates/layout.jinja2
@@ -10,6 +10,7 @@
     <title>Pyramid • TodoMVC</title>
     <link rel="stylesheet" href="{{ request.static_url('todopiranhaform:static/todomvc-common/base.css') }}">
     <link rel="stylesheet" href="{{ request.static_url('todopiranhaform:static/todomvc-app-css/index.css') }}">
+    <link rel="stylesheet" href="{{ request.static_url('todopiranhaform:static/todomvc-app-css/custom-index.css') }}">
 </head>
 <body>
 
