--- a/todo-piranha-form/todopiranhaform/templates/login.jinja2
+++ b/todo-piranha-form/todopiranhaform/templates/login.jinja2
@@ -4,12 +4,16 @@
 
     <section id="todoapp">
         <header id="header">
-            <h1>Todos</h1>
+            <h1>Login</h1>
         </header>
 
         <div id="formlogin">
             <p>Please enter your username and password (demo / demo) <br/></p>
+
+            <p><em>{{ message }}</em></p>
+
             <form action="/login">
+                <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
                 <input type="hidden" name="came_from" value="{{ came_from }}"/>
                 <input name="login" class="edit login" placeholder="Enter your username" autofocus>
                 <input type="password" name="password" class="edit login" placeholder="Enter your password">
