add task completed / delete task / displey items left

--- a/todo-piranha-form/todopiranhaform/templates/layout.jinja2
+++ b/todo-piranha-form/todopiranhaform/templates/layout.jinja2
@@ -52,7 +52,7 @@
 
         <p>Created by <a href="http://twitter.com/areskib">Areski Belaid</a></p>
         <p>Code on Github <a href="https://github.com/areski/todo-piranha">Todo-Piranha</a></p>
-        <p>Not part of <a href="http://todomvc.com">TodoMVC</a></p>
+        <p>Sadly Not Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
 </body>
 </html>
