--- a/todo-piranha-form/todopiranhaform/static/todomvc-app-css/custom-index.css
+++ b/todo-piranha-form/todopiranhaform/static/todomvc-app-css/custom-index.css
@@ -54,3 +54,23 @@
   text-shadow: 0 1px 0 rgba(200, 255, 200, 0.5);
   text-align: center;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+#todo-list li .destroy {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 10px;
+  bottom: 0;
+  width: 40px;
+  height: 32px;
+  margin: auto 0;
+  font-size: 30px;
+  color: #cc9a9a;
+  margin-bottom: 11px;
+  transition: color 0.2s ease-out;
+}
