--- a/todo-piranha-form/todopiranhaform/templates/todo.jinja2
+++ b/todo-piranha-form/todopiranhaform/templates/todo.jinja2
@@ -4,11 +4,15 @@
 <section id="todoapp">
     <header id="header">
         <h1>todos</h1>
-        <form action="/todo">
+
+        <form action="{{request.route_url('viewtodo')}}" method="post" class="form">
             <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
-            <input type="hidden" name="form.submitted" value="true">
-            <input id="new-todo" placeholder="What needs to be done?" name="description" autofocus>
+            {{form.taskname(id='new-todo', class_='form-control', placeholder="What needs to be done?", autofocus=true)}}
+            {% for error in form.taskname.errors %}
+                <div class="error">{{ error }}</div>
+            {% endfor %}
         </form>
+
     </header>
     <section id="main">
         <ul id="todo-list">
